Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -117,6 +117,6 @@ hr {
 
 @media (hover: none) and (pointer: coarse) {
   .modal-dialog {
-    padding-top: 2.5rem;
+    margin-top: 1rem;
   }
 }
